--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,10 @@
 name: Java CI with Gradle
 
-on: [push, pull_request]
+on: 
+ push:
+   branches: [ master ]
+ pull_request:
+   branches: [ master ]
 
 jobs:
   build:
@@ -10,11 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
           java-version: '11'
-          distribution: 'adopt'
+          
+      - name: Start SUT
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew test
+        run: ./gradlew test --info -Dselenide.headless=true
