--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,10 @@
 name: Java CI with Gradle
 
 on: 
- push:
-   branches: [ master ]
- pull_request:
-   branches: [ master ]
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -16,9 +16,10 @@ jobs:
      - name: Set up JDK 11
        uses: actions/setup-java@v2
        with:
-          java-version: '11'
+         java-version: '11'
           
      - name: Start SUT
+       run: java -jar artifacts/app-card-delivery.jar &
      - name: Grant execute permission for gradlew
        run: chmod +x gradlew
      - name: Build with Gradle
